# universe-sim

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
.opencode/plans/: audit-report.md
docs/: orbital-elements-reference.md
docs/plans/: 2026-03-05-modular-refactor-design.md  2026-03-05-modular-refactor-implementation.md
src/: app.rs  camera.rs  components.rs  error.rs  lib.rs  main.rs  resources.rs  solar_system_data.rs  state.rs  types.rs
src/physics/: body.rs  kepler.rs  mod.rs  sync.rs  system.rs
src/render/: mod.rs  sphere.rs  trail.rs
src/ui/: bodies.rs  controls.rs  labels.rs  mod.rs  shortcuts.rs
tests/: integration_test.rs
