[package]
name = "universe-sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "3D Solar System Simulator using Bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
nalgebra = "0.34"

# Optimize for native performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
